- Added: If a SQL database is available then number of player headshots and number of rounds fired are added to the database
- Added: Main target illumination flares when it is dark (can be disabled in lobby "Illuminate main target:" or d_IllumMainTarget in description.ext)
- Changed: CAS with very short cooldown (90 secs) if artillery is set to unlimited, by longtimegamer
- Changed: Added visibility check for player and AI names over the head, means, players see the names above head if the unit is visible and not all the time
- Changed: Maintarget prisoner event now has a suicide bomb if the rescue is botched, by longtimegamer
- Changed: Enemy AI vehicle island patrols are back
- Fixed: If a player can escape jail with a mod like enhanced movement put him back again into the jail if he is too far away; if he does it 10 times then the player will be banned for the running session
- Fixed: Object compositions were placed half in the ground on CUP Winter Chernarus
- Fixed: Event triggers now have a defined height to prevent flyovers from triggering ground events, by longtimegamer
- Fixed: In ranked mode players with rank private ended up with just one uniform in Virtual Arsenal
- Fixed: incorrect logic in maintarget event selection, improved dashboard list and line breaks, by longtimegamer
- Fixed: Camouflage script had the wrong stance in it, "STANCE" instead of "STAND"
- Fixed: ToolKit was missing in the unsung version in VA
- Fixed: Choppers exploded on the carrier in the carrier version (yet again)
- Improved: Make use of new A3 2.02 scripting commands where possible
- Improved: Use new import keyword to load UI configs from the game itself rather than copying them into description.ext
- Improved security: The following scripting commands can no longer be executed over the network when remoteexec mode is set to 1: setVariable, switchMove, setDir, hideObjectGlobal, endMission, setCaptive and addScore