@@ -10,10 +10,12 @@ ATTENTION:	SQL database table players has changed. Run DAddColumn_players_table_
 - Added: If a SQL database is available then player movement on foot, in land, air and maritime vehicles is added to the database (in meter)
 - Added: If a SQL database is available then number of player headshots and number of rounds fired are added to the database
 - Added: Main target illumination flares when it is dark (can be disabled in lobby "Illuminate main target:" or d_IllumMainTarget in description.ext)
+- Added: Parameter to enable/disable static weapon defenses at maintarget, by longtimegamer
 - Changed: CAS with very short cooldown (90 secs) if artillery is set to unlimited, by longtimegamer
 - Changed: Added visibility check for player and AI names over the head, means, players see the names above head if the unit is visible and not all the time
 - Changed: Maintarget prisoner event now has a suicide bomb if the rescue is botched, by longtimegamer
 - Changed: Enemy AI vehicle island patrols are back
+- Changed: You can now disable ACE medical system and use the internal mission Revive when ACE is running (d_ACEMedicalR in description.ext, "Disable ACE medical revive (if ACE is used) and use mission revive" in lobby, finally in, somehow got lost before)
 - Fixed: If a player can escape jail with a mod like enhanced movement put him back again into the jail if he is too far away; if he does it 10 times then the player will be banned for the running session
 - Fixed: Object compositions were placed half in the ground on CUP Winter Chernarus
 - Fixed: Event triggers now have a defined height to prevent flyovers from triggering ground events, by longtimegamer
